# sfml-lighting

./: .gitignore  CMakeLists.txt  README.md
include/: controls.hpp  defines.hpp  demo.hpp  lighting.hpp  map.hpp  misc.hpp  source.hpp  state.hpp
src/: controls.cpp  demo.cpp  lighting.cpp  main.cpp  map.cpp  misc.cpp  source.cpp
