CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

SET ( CMAKE_LINK_LIBS sfml-graphics sfml-window sfml-system sfgui m stdc++ )
SET ( CMAKE_CXX_FLAGS  "-std=c++11" )
SET ( CMAKE_PROJECT   lighting )
FILE ( GLOB SRC "src/*.cpp" )

PROJECT ( ${CMAKE_PROJECT} )
INCLUDE_DIRECTORIES ("include" )
ADD_COMPILE_OPTIONS ( "-std=c++11" )
ADD_EXECUTABLE ( ${CMAKE_PROJECT} ${SRC} )
TARGET_LINK_LIBRARIES ( ${CMAKE_PROJECT}  ${CMAKE_LINK_LIBS} )
